--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,15 @@
+
+
 h1 {
-    color: red;
+    color: black;
+}
+.header__link{
+    color: black;
+    text-decoration-line: none;
+    padding: 10px;
+    background-color: lightgrey;
+    border : 2px solid black;
+    border-radius: 30px;
+    float: right;
+    margin-right: 5px;
 }
