--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,15 +1,74 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    width: 100%;
+    position: sticky;
+    flex-direction: row;
+    left: 0;
+    right: 0;
+    padding: 1%;
+    background-color: antiquewhite;
+}
+
+.flags {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 2%;
+    padding: 1%;
+}
 
 h1 {
-    color: black;
+    color: darkblue;
+    justify-content: center;
+    font-family: montserrat;
+    padding: 5%;
+    font-size: 3.5em;
+    margin-bottom: -2%;
 }
-.header__link{
-    color: black;
+
+hr {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: 1px solid darkblue;
+}
+
+.hero {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 2%;
+    padding: 2%;
+}
+
+.hero__img {
+    width: 45%;
+    margin: 5%;
+    margin-bottom: 6%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50px;
+    padding: 1%;
+    background-color: antiquewhite;
+}
+
+.header__link {
+    color: darkblue;
+    font-family: montserrat;
+    font-weight: 600;
     text-decoration-line: none;
     padding: 10px;
-    background-color: lightgrey;
-    border : 2px solid black;
+    background-color: antiquewhite;
+    border: 2px solid darkblue;
     border-radius: 30px;
-    float: right;
-    margin-right: 5px;
+    float: right, bottom;
+    margin-left: 5%;
 }
